# noissh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
contrib/: README.md  noisshd.service
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/noise-core/: Cargo.toml
crates/noise-core/src/: lib.rs
crates/predict/: Cargo.toml
crates/predict/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: control.rs  handshake.rs  lib.rs  shell.rs  xfer.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs  login.rs
crates/term/: Cargo.toml
crates/term/src/: cell.rs  diff.rs  grid.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: input.rs  lib.rs  replay.rs  stream.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
docs/: ARCHITECTURE.md  PROTOCOL.md  SECURITY.md  USER_GUIDE.md
docs/man/: noissh-keygen.1  noissh.1  noisshd.1
docs/specs/: 2026-06-18-noissh-design.md
docs/superpowers/plans/: 2026-06-18-noissh.md
src/: client.rs  config.rs  exec.rs  forward.rs  lib.rs  server.rs  socks.rs  ssh.rs  sshconfig.rs  status.rs  tty.rs  xfer.rs
tests/: agent_forward_socket.rs  cli_help.rs  exec_socket.rs  file_transfer_socket.rs  forward_socket.rs  forwarding.rs  reattach.rs  remote_forward_socket.rs  resilience.rs  security.rs  socket_e2e.rs  socks_socket.rs  ssh_autoinstall.rs  ssh_bootstrap.rs
