[workspace]
resolver = "2"
members = [
    "crates/noise-core",
    "crates/wire",
    "crates/transport",
    "crates/term",
    "crates/predict",
    "crates/auth",
    "crates/pty",
    "crates/proto",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Gerardo <gedigi@live.com>"]

[workspace.dependencies]
# Lean dependency surface: only the features actually used are enabled.
snow = "0.10" # default-resolver provides ChaChaPoly + BLAKE2s + 25519 (pure Rust)
vte = { version = "0.15", default-features = false } # core Parser/Perform only (no `ansi` layer)
nix = { version = "0.31", default-features = false, features = ["term", "fs", "user", "poll"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
getrandom = "0.4"
thiserror = "2"

noise-core = { path = "crates/noise-core" }
wire = { path = "crates/wire" }
transport = { path = "crates/transport" }
term = { path = "crates/term" }
predict = { path = "crates/predict" }
auth = { path = "crates/auth" }
pty = { path = "crates/pty" }
proto = { path = "crates/proto" }

[package]
name = "noissh"
version = "0.2.0"
edition = "2024"

[workspace.lints.clippy]
all = "warn"

[lib]
name = "noissh"
path = "src/lib.rs"

[[bin]]
name = "noissh"
path = "src/bin/noissh.rs"

[[bin]]
name = "noisshd"
path = "src/bin/noisshd.rs"

[dependencies]
noise-core = { workspace = true }
wire = { workspace = true }
transport = { workspace = true }
term = { workspace = true }
predict = { workspace = true }
auth = { workspace = true }
pty = { workspace = true }
proto = { workspace = true }
nix = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
terminal_size = "0.4.4"
daemonize = "0.5.0"

[lints]
workspace = true
