[workspace]
resolver = "2"
members = [
    "crates/noise-core",
    "crates/wire",
    "crates/transport",
    "crates/term",
    "crates/predict",
    "crates/auth",
    "crates/pty",
    "crates/proto",
]

[workspace.package]
version = "0.4.6"
edition = "2024"
license = "MIT"
authors = ["Gerardo <gedigi@live.com>"]

[workspace.dependencies]
# Lean dependency surface: only the features actually used are enabled.
snow = "0.10" # default-resolver provides ChaChaPoly + BLAKE2s + 25519 (pure Rust)
vte = { version = "0.15", default-features = false } # core Parser/Perform only (no `ansi` layer)
nix = { version = "0.31", default-features = false, features = ["term", "fs", "user", "poll"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
getrandom = "0.4"
thiserror = "2"

noise-core = { path = "crates/noise-core" }
wire = { path = "crates/wire" }
transport = { path = "crates/transport" }
term = { path = "crates/term" }
predict = { path = "crates/predict" }
auth = { path = "crates/auth" }
pty = { path = "crates/pty" }
proto = { path = "crates/proto" }

[package]
name = "noissh"
version = "0.4.6"
edition = "2024"

[workspace.lints.clippy]
all = "warn"

[lib]
name = "noissh"
path = "src/lib.rs"

[[bin]]
name = "noissh"
path = "src/bin/noissh.rs"

[[bin]]
name = "noisshd"
path = "src/bin/noisshd.rs"

[[bin]]
name = "noissh-keygen"
path = "src/bin/noissh-keygen.rs"

[dependencies]
noise-core = { workspace = true }
wire = { workspace = true }
transport = { workspace = true }
term = { workspace = true }
predict = { workspace = true }
auth = { workspace = true }
pty = { workspace = true }
proto = { workspace = true }
nix = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
terminal_size = "0.4.4"
daemonize = "0.5.0"
# Safe signal handling (flag registration only) to restore the terminal when the
# interactive client is killed by a signal.
signal-hook = { version = "0.3", default-features = false }

[lints]
workspace = true
